--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,111 @@
-html,
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    body {
+        @apply font-body text-[#232428];
+    }
+}
+
+@layer components {
+    .headerLink {
+        @apply cursor-pointer opacity-75 transition hover:opacity-100;
+      }
+    
+      .headerIcon {
+        @apply h-6 w-6 cursor-pointer opacity-75 transition hover:opacity-100;
+      }
+
+    .logoIcon {
+        @apply relative h-12 w-28 cursor-pointer opacity-75 transition hover:opacity-100;
+    }
+
+    .link {
+        @apply relative cursor-pointer text-base font-medium before:absolute before:inset-x-2 before:-bottom-1.5 before:h-0.5 before:origin-left before:scale-x-0 before:transform before:rounded-bl before:bg-black before:transition-all before:duration-200 hover:before:scale-x-50;
+  }
+
+  .borderGradient {
+    text-align: center;
+    padding-bottom: 5px;
+    background: linear-gradient(to right, #ec4899, #8b5cf6) left bottom
+      no-repeat;
+    background-size: 100% 2px;
+  }
+
+  .tabPanel {
+    @apply grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3;
+  }
+  
+
+    @media (min-width: 1024px) {
+        .link {
+            @apply before:inset-x-0 hover:before:scale-x-100
+        }
+    }
+
+    .overlay {
+
+        max-width: 600px;
+        height: auto;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+    }
+
+    .modalContainer {
+        max-width: 100vh;
+        max-height: 100vh;
+        position: fixed;
+        top: 50%;
+        left: 45%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        background-color: rgba(255, 255, 255, 0.516);
+        padding: 30px;
+        border-radius: 0.75rem;
+        box-shadow: 0px 0px 18px 0px rgb(0, 0, 0, 0.75);
+        text-align: center;
+        
+
+    }
+
+    .modalRight {
+        width: 30vh;
+        height: 30vh;
+    }
+
+    .closeBtn {
+        position: fixed;
+        top: 12px;
+        right: 8px;
+        font-weight: 500;
+    }
+
+    .borderGradient {
+        text-align: center;
+        padding-bottom: 5px;
+        background: linear-gradient(to right, #C38314, #4f4f4f) left bottom no-repeat;
+        background-size: 100% 2px;
+    }
+
+    .indicator{
+        transition: left .4s;
+      }
+
+
+
+}
+
+.marcas-tab{
+  min-width: 50% !important;
+  min-height: 50% !important ;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
