--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,8 +105,19 @@
 }
 
 .marcas-tab{
-  min-width: 50% !important;
-  min-height: 50% !important ;
+  min-width: 100% !important;
+  min-height: 100% !important ;
   padding: 0;
   margin: 0;
+  
 }
+
+@media (min-width: 768px) {
+  .marcas-tab{
+    min-width: 50% !important;
+    min-height: 50% !important ;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+}
+
